speed up execution of MELAvar by allocating memory for the entire melavar-DF  at startup

--- a/Configuration_r33-24.ini
+++ b/Configuration_r33-24.ini
@@ -25,7 +25,7 @@ VariablesToDeriveResolvedRadionRSG = ['lep1_e', 'lep1_px', 'lep1_py', 'lep1_pz',
 InputFeaturesResolvedRadionRSG = ['lep1_m', 'lep1_pt', 'lep1_eta', 'delta_phi_lep12', 'lep2_m', 'lep2_pt', 'lep2_eta', 'delta_phi_jetlep', 'sigVJ1_m', 'sigVJ1_pt', 'sigVJ1_eta', 'delta_phi_lepjet', 'sigVJ2_m', 'sigVJ2_pt', 'sigVJ2_eta', 'delta_phi_jet12', 'mass']#'Zcand_m', 'Zcand_pt' ### WITH DELTA PHI
 ##InputFeaturesResolvedRadionRSG = ['lep1_m', 'lep1_pt', 'lep1_eta', 'lep1_phi', 'lep2_m', 'lep2_pt', 'lep2_eta', 'lep2_phi', 'sigVJ1_m', 'sigVJ1_pt', 'sigVJ1_eta', 'sigVJ1_phi', 'sigVJ2_m', 'sigVJ2_pt', 'sigVJ2_eta', 'sigVJ2_phi', 'mass']
 #InputFeaturesResolvedRadionRSG = ['lep1_e', 'lep1_px', 'lep1_py', 'lep1_pz', 'lep2_e', 'lep2_px', 'lep2_py', 'lep2_pz', 'VDijet_e', 'VDijet_px', 'VDijet_py', 'VDijet_pz', 'sigVJ1_e', 'sigVJ1_px', 'sigVJ1_py', 'sigVJ1_pz', 'sigVJ2_e', 'sigVJ2_px', 'sigVJ2_py', 'sigVJ2_pz', 'mass'] ## e, px, py, pz
-
+InputFeaturesResRRwithMELA = ['X_ZZ_resolved_m', 'Zcand_m', 'VDijet_m']
 
 
 ######### Resolved regime / HVT : variables and input features 
@@ -36,6 +36,7 @@ VariablesToDeriveResolvedHVT = ['lep1_e', 'lep1_px', 'lep1_py', 'lep1_pz', 'lep2
 InputFeaturesResolvedHVT = ['lep1_m', 'lep1_pt', 'lep1_eta', 'delta_phi_lep12', 'lep2_m', 'lep2_pt', 'lep2_eta', 'delta_phi_jetlep','sigVJ1_m', 'sigVJ1_pt', 'sigVJ1_eta', 'delta_phi_lepjet', 'sigVJ2_m', 'sigVJ2_pt', 'sigVJ2_eta', 'delta_phi_jet12', 'mass']#'Zcand_m', 'Zcand_pt'
 #InputFeaturesResolvedHVT = ['lep1_e', 'lep1_px', 'lep1_py', 'lep1_pz', 'lep2_e', 'lep2_px', 'lep2_py', 'lep2_pz', 'VDijet_e', 'VDijet_px', 'VDijet_py', 'VDijet_pz', 'sigVJ1_e', 'sigVJ1_px', 'sigVJ1_py', 'sigVJ1_pz', 'sigVJ2_e', 'sigVJ2_px', 'sigVJ2_py', 'sigVJ2_pz', 'mass']#'Zcand_m', 'Zcand_pt'
 #InputFeaturesResolvedHVT = ['lep1_m', 'lep1_pt', 'lep1_eta', 'delta_phi_lep12', 'lep2_m', 'lep2_pt', 'lep2_eta', 'delta_phi_jetlep', 'VDijet_m', 'VDijet_pt', 'VDijet_eta', 'delta_phi_jet12', 'sigVJ1_m', 'sigVJ1_pt', 'sigVJ1_eta', 'delta_phi_lepjet', 'sigVJ2_m', 'sigVJ2_pt', 'sigVJ2_eta', 'sigVJ2_phi', 'mass']#'Zcand_m', 'Zcand_pt']
+InputFeaturesResHVTwithMELA = ['X_WZ_resolved_m', 'Zcand_m', 'VDijet_m']
 
 ###### MELA variables 
 VariablesMELA_Resolved = ['MELA_cthstr', 'MELA_phi', 'MELA_phi1', 'MELA_cth1', 'MELA_cth2', 'MELA_Xy', 'MELA_Xpt']
